--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1401,6 +1401,7 @@ aside.col-md-3 .region.region-sidebar-first.well {
   border-top: 0 ;
   border-bottom: 0;
   margin-top: 4px;
+  float: right;
 }
 .hwc-share-widget ul {
   padding-top: 0px;
@@ -1587,11 +1588,11 @@ aside.col-md-3 .region.region-sidebar-first.well {
 }
 .region-sidebar-first .contextual-links-region {
   float: left;
-  padding: 0em 0.5em 0 1em;
+  padding: 0 0 0 1em;
   border: 0;
   border-radius: 5px;
   margin-top: 26px;
-  width: 93%;
+  width: 100%;
 }
 .sidebars_first .content-filters {
   float: left;
@@ -3626,9 +3627,10 @@ body.een .panels-flexible-row-partner_detail-13 {
 .page-events #osha-events-dates-form {
   border: 2px solid #B0B1B2;
   border-radius: 7px;
-  padding: 1em;
+  padding: 1em 0 1em 1em;
   float: right;
-  margin-top: 0.6em;
+  margin-top: 33px;
+  width: 288px;
 }
 .page-events #osha-events-dates-form input {
   height: 100%;
@@ -3708,6 +3710,7 @@ body.een .panels-flexible-row-partner_detail-13 {
 .page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row {
   border-bottom: 1px solid #749b00;
   float: left;
+  width: 100%!important;
 }
 .page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row .views-field-title-field a {
   font-size: 1.6em;
@@ -3855,7 +3858,14 @@ body.een .panels-flexible-row-partner_detail-13 {
 .node-type-events .group-left2 .field-name-field-organizer .talking-details,
 .node-type-events .group-footer .field-name-field-organizer .talking-details {
   width: 100%;
-  padding-top: 1em;
+}
+.node-type-events .group-left2 .view-event-schedule .views-row,
+.node-type-events .group-footer .view-event-schedule .views-row {
+  padding-bottom: 1em;
+}
+.node-type-events .group-left2 .view-event-schedule .views-row-last,
+.node-type-events .group-footer .view-event-schedule .views-row-last {
+  padding-bottom: 0;
 }
 .node-type-events .group-left2 .field-label,
 .node-type-events .group-footer .field-label {
@@ -3869,6 +3879,10 @@ body.een .panels-flexible-row-partner_detail-13 {
   font-weight: 400;
   padding-top: 1em;
   padding-bottom: 0.2em;
+}
+.node-type-events .group-left2 img.file-icon,
+.node-type-events .group-footer img.file-icon {
+  display: none;
 }
 .node-type-events .group-right2 {
   float: right;
@@ -3951,6 +3965,45 @@ body.een .panels-flexible-row-partner_detail-13 {
 .node-events .field-name-field-contact-phone,
 .node-events .field-name-field-website-of-event {
   padding-bottom: 0;
+}
+/* Search automplete */
+ul[data-sa-theme="basic-green"].ui-menu {
+  left: -105px !important;
+}
+.view-footer .pager-total {
+  position: absolute;
+  right: 0;
+  top: 25px;
+  color: #003399;
+  font-weight: bold;
+}
+/* Get your certificate */
+.page-get-involved-get-your-certificate .pane-node-field-image {
+  clear: both;
+}
+.page-get-involved-get-your-certificate .pane-node-field-image {
+  width: auto;
+  max-width: none;
+}
+.page-get-involved-get-your-certificate .pane-node-body {
+  width: 72%;
+  padding-left: 1em;
+}
+.page-get-involved-get-your-certificate .control-label {
+  color: #003399;
+}
+.page-get-involved-get-your-certificate input[type="text"],
+.page-get-involved-get-your-certificate body textarea,
+.page-get-involved-get-your-certificate textarea.form-control,
+.page-get-involved-get-your-certificate select,
+.page-get-involved-get-your-certificate .form-control,
+.page-get-involved-get-your-certificate form.webform-client-form button {
+  border-radius: 5px;
+}
+.page-get-involved-get-your-certificate form.webform-client-form .form-select {
+  border-radius: 5px;
+  padding-left: 0.5em;
+  padding-left: 12px;
 }
 @media (max-width: 1200px) {
   .start-browsing {
@@ -4351,8 +4404,15 @@ body.een .panels-flexible-row-partner_detail-13 {
     top: 73px;
     position: absolute;
   }
+  .page-events .col-md-9 {
+    clear: both;
+  }
+  .page-events #osha-events-dates-form {
+    width: 301px!important;
+  }
   .page-events #osha-events-dates-form {
     float: left;
+    margin-left: 15px;
   }
   .page-events .views-exposed-widgets {
     padding-top: 0;
@@ -4580,6 +4640,13 @@ body.een .panels-flexible-row-partner_detail-13 {
     left: 41%;
     top: 73px;
   }
+  .page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row .views-field-view-node,
+  .add-to-calendar {
+    margin-top: auto;
+  }
+  .page-events #osha-events-dates-form {
+    width: 157px;
+  }
 }
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
   /* iPad */
@@ -4625,16 +4692,22 @@ body.een .panels-flexible-row-partner_detail-13 {
     margin-right: 0.5em;
   }
   .page-events .region.region-content #block-system-main .views-exposed-widgets #edit-submit-events-search {
-    left: auto;
+    left: 169px;
     top: 24px;
   }
   .page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row .views-field-view-node {
     position: relative;
-    margin-left: auto;
-    float: none;
-    clear: none;
-    margin-top: 52px;
-    width: 100%;
+    float: left;
+    clear: both;
+    margin-top: -24px;
+    width: auto;
+    margin-left: 230px;
+  }
+  .add-to-calendar {
+    margin-top: -25px;
+  }
+  .page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row .views-field-title-field a {
+    font-size: 1.3em;
   }
   .page-events .view-events-search .view-content {
     padding-top: 0em;
@@ -5204,6 +5277,9 @@ body.een .panels-flexible-row-partner_detail-13 {
   .add-to-calendar {
     margin-left: 108px;
     margin-top: -21px;
+  }
+  .page-events .col-md-9 {
+    clear: both;
   }
 }
 @media (max-width: 600px) {
