--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -7441,18 +7441,6 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
     	margin-bottom: 10px;
 	}
 
-	h1{
-		background: url("../images/content/mail-newsletter-big.jpg") no-repeat center top;
-		background-size: 61px;
-		padding-top: 80px;
-		padding-bottom: 20px;
-		color: @color3 !important;
-		font-weight: bold !important;
-		font-style: normal !important;
-		margin-top: 5px;
-		border-bottom: 1px dotted @color3 !important;
-		margin-bottom: 1.5em;
-	}
 	button {
 		text-align: left;
 		padding-left: 1em;
@@ -7473,18 +7461,15 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 			font-style: normal;
 		}
 		#subscribe-extra{
-			font-weight: bold;
 			div form > div{
 				padding-bottom: 0em;
 				overflow: hidden;
 			}
 			input{
 				font-weight: normal;
-				width: 247px;
 				margin-right: 0px;
 			}
 			label, span{
-				font-weight: bold;
 				margin-right: 10px;
 			}
 			span.captcha{
@@ -7535,14 +7520,12 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 			.privacy-policy-oshmail{
 				margin-top: 0px;
 				display: block;
-				text-align: center;
+				text-align: left;
 			}
 			hr{
 				display: none;
 			}
 			#edit-subscribe-details{
-				margin: 0 auto;
-				max-width: 390px;
 				margin-bottom: 20px;
 				position: relative;
 				span{
@@ -7559,7 +7542,6 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 					vertical-align: inherit;
 					position: absolute;
 					top: 14px;
-					right: 12%;
 				}
 			}
 			#edit-unsubscribe-details{
