--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -25,6 +25,10 @@
 	    margin-top: 1em;
 	}
 
+	.page-events #block-osha-newsletter-osha-newsletter-events-subscribe{
+		display: none;
+	}
+
 }
 
 
@@ -104,17 +108,4 @@
 		width: 100%;
 	}
 
-	.views-widget-filter-field_country_code{
-		float: none;
-		clear: both !important;
-		padding-top: 10px !important;
-	}
-
-	.page-events .region-content #block-system-main .views-exposed-widgets .form-item-years{
-		padding-top: 10px;
-	}
-
-	.page-events .region-content #block-system-main .views-exposed-widget #edit-submit-events-search{
-		top: 34px;
-	}
 }
