--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -703,7 +703,22 @@
 		}
 	}
 
+	.node-type-events .group-right2{
+		width: 100%;
+		clear: both;
+	}
 
+	.node-type-events .group-left2, .node-type-events .group-footer{
+		width: 100%;
+		clear: both;
+	}
+
+	.node-type-events .add-to-calendar{
+		width: 148px;
+    	float: none;
+    	margin: 0 auto;
+    	padding-bottom: 2em;
+	}
 
 }
 
