--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -408,7 +408,7 @@
 
 		#osha-events-dates-form{
 			float: left;
-			margin-left: 15px;
+			margin-left: 0;
 		}
 
 		.views-exposed-widgets{
@@ -449,11 +449,6 @@
 
 	.page-events .region-content #block-system-main .views-exposed-widgets .form-item-years{
 		padding-top: 0px;
-	}
-
-	.views-widget-filter-field_country_code{
-		float: none;
-		clear: both !important;
 	}
 
 	.add-to-calendar {
@@ -636,11 +631,6 @@
 	.page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row{
 		min-height: auto;
 		width: 100%;
-	}
-
-	.views-widget-filter-field_country_code{
-		float: none;
-		clear: both !important;
 	}
 
 	.footer{
