--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -728,9 +728,8 @@
     	width: 152px!important;
 	}
 
-	.views-widget-filter-field_country_code{
-		float: none;
-		clear: both !important;
+	#block-osha-events-osha-events-dates{
+		margin-left: 15px;
 	}
 
 	.page-events #edit-search-api-views-fulltext {
