--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -409,6 +409,11 @@
 		#osha-events-dates-form{
 			float: left;
 			margin-left: 0;
+			margin-bottom: 0;
+		}
+
+		.region-sidebar-first .contextual-links-region{
+			padding-left: 0;
 		}
 
 		.views-exposed-widgets{
@@ -706,6 +711,10 @@
 
 	.how-to-apply > div.boxes > div:nth-child(3) {
 	    right: 0%;
+	}
+
+	.before-the-campaign .content-box-before .box-before{
+		margin-bottom: 0;
 	}
 
 	/* Events */
