--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -703,6 +703,16 @@
 		}
 	}
 
+	.node-type-events .content-left-column{
+		width: 100%;
+		clear: both;
+	}
+
+	.node-type-events .field-name-body{
+		margin-left: 0 !important;
+		margin-right: 0 !important;
+	}
+
 	.node-type-events .group-right2{
 		width: 100%;
 		clear: both;
