--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -461,6 +461,18 @@
 	    margin-top: -2em;
 	}
 
+	.node-type-events{
+		
+		.main-container h2{
+			margin-left: 0;
+			margin-right: 0;
+		}
+
+		.group-footer{
+			padding-left: 0!important;
+			padding-right: 0!important;
+		}
+	}
 	/*Footer*/
 	.footer-section{
 		display: none;
