--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4353,10 +4353,15 @@ body.een{
 	    font-weight: bold;
 	}
 
+	.content-left-column{
+		width: 70%;
+		float: left;
+		padding-top: 2em;
+	}
+
 	.group-left2, .group-footer{
 		float: left;
 		margin-right: 1em;
-		width: 70%;
 
 		.field-name-field-speaker{
 			.content{
@@ -4429,6 +4434,7 @@ body.een{
 	.group-right2{
 		float: right;
 	 	width: 22%;
+	 	padding-top: 2em;
 	 	.event_day_month{
 	 		display: flex;
 	 		justify-content: center;
