--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -456,7 +456,7 @@
 		padding-top: 0px;
 	}
 
-	.add-to-calendar {
+	.page-events .add-to-calendar {
 	    margin-left: 330px;
 	    margin-top: -2em;
 	}
