--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4447,7 +4447,24 @@ body.een{
 	 	}
 
 	 	.add-to-calendar{
+	 		display: flex;
+    		justify-content: center;
 	 		padding-bottom: 2em;
+		    width: auto;
+		    text-align: left;
+		    padding-left: 0;
+		    margin: 0em auto;
+		    float: none;
+			background: none;
+			text-decoration: none;
+			&:before{
+				content:' ';
+				background: url(../images/green-calendar.png) no-repeat 13px 2px;
+				display: block;
+				float: left;
+				width: 40px;
+				height: 30px;
+			}
 	 	}
 
 	 	.field-name-field-start-date{
