HW20-46 - HWC20 Development -Events list, detail, backend

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -3928,37 +3928,27 @@ body.een .panels-flexible-row-partner_detail-13 {
   margin-right: 0;
 }
 .node-type-events .group-right2 .add-to-calendar {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 2em;
-  width: auto;
-  text-align: left;
-  padding-left: 0;
-  margin: 0em auto;
-  float: none;
-  background: none;
-  text-decoration: none;
-}
-.node-type-events .group-right2 .add-to-calendar:before {
-  content: ' ';
-  background: url(../images/green-calendar.png) no-repeat 13px 2px;
-  display: block;
-  float: left;
-  width: 40px;
-  height: 30px;
+  margin-top: 10px;
+  clear: both;
+  margin-bottom: 30px;
 }
 .node-type-events .group-right2 .field-name-field-start-date {
   width: 100%;
   border-top: 3px solid #B0B1B2;
   padding-top: 8em;
-  padding-bottom: 5em;
+  padding-bottom: 20px;
   background: url(../images/content/calendar-event-detail.png) no-repeat center 3em;
 }
-.node-type-events .group-right2 .field-name-field-start-date .date-display-single {
+.node-type-events .group-right2 .field-name-field-start-date .date-display-single,
+.node-type-events .group-right2 .field-name-field-start-date .date-display-start,
+.node-type-events .group-right2 .field-name-field-start-date .date-display-end {
   color: #003399;
   font-size: 1.8rem!important;
   display: block;
   width: 100%;
+}
+.node-type-events .group-right2 .field-name-field-start-date {
+  color: #003399;
 }
 .node-type-events .group-right2 .event-location-container {
   width: 100%;
@@ -3968,6 +3958,7 @@ body.een .panels-flexible-row-partner_detail-13 {
   display: flex;
   justify-content: center;
   position: relative;
+  padding-bottom: 0;
 }
 .node-type-events .group-right2 .event-location-container span.event-location-location {
   padding: 0;
