HW20-46 - HWC20 Development -Events list, detail, backend

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -4824,6 +4824,9 @@ ul[data-sa-theme="basic-green"].ui-menu {
   .page-events .view-events-search .view-content {
     padding-top: 0em;
   }
+  .node-type-events .group-right2 .add-to-calendar {
+    float: none;
+  }
 }
 @media (max-width: 768px) {
   .start-browsing .start-browsing-box {
