HW20-94 - Splash Page - Explorer - See all events is not included in the box

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -478,8 +478,8 @@ ul.time-and-counters{
 		}
 
 		.box-before.news{
-			height: 100%;
 			margin-bottom: 2em;
+			padding-bottom: 2em;
 			h3{
 				position: relative;
 				&:before{
