--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -420,8 +420,8 @@ ul.time-and-counters li .counter-label {
   margin-top: 0.8em;
 }
 .before-the-campaign .content-box-before .box-before.news {
-  height: 100%;
   margin-bottom: 2em;
+  padding-bottom: 2em;
 }
 .before-the-campaign .content-box-before .box-before.news h3 {
   position: relative;
